# agent_memory

./: .gitignore  README.md  pyproject.toml
hooks-templates/claude/: settings.json
hooks-templates/cursor/: hooks.json
prompts/: summarize_session.md
src/agent_memory/: __init__.py  branch_sync.py  cli.py  git_ops.py  install.py  llm.py  load_memory.py  paths.py  resources.py  summarize.py
templates/: post-checkout
templates/memory/: CONTEXT.md  DECISIONS.md  GOTCHAS.md  OPEN_QUESTIONS.md  PROGRESS.md
tests/: conftest.py  test_branch_sync.py  test_git_ops.py  test_install.py  test_load_and_save.py
